fix(book-page): fix recommendations overflow + title
SL-23

--- a/src/pages/book/styles.module.scss
+++ b/src/pages/book/styles.module.scss
@@ -105,5 +105,6 @@
 
     &Feed {
         display: flex;
+        overflow: auto;
     }
 }
